fixed z-index nav bar issue

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ section p {
   width: 100%;
   height: 7vh;
   position: fixed;
-  z-index: 0;
+  z-index: 1;
 }
 
 .nav-item {
